Ideation mobile and tablet views

--- a/src/app/ideation/components/add-idea/add-idea.component.html
+++ b/src/app/ideation/components/add-idea/add-idea.component.html
@@ -88,4 +88,4 @@
     </div>
   </div>
 </div>
-<div class="overlay" *ngIf="(app.addArgument | async)"></div>
+<div class="overlay" *ngIf="(app.addIdea | async)"></div>
