--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -1,3 +1,4 @@
+@use "mixins";
 .idea {
   display: flex;
   flex-direction: column;
@@ -9,6 +10,17 @@
   height: 280px;
   width: 264px;
   transition: all ease-in 200ms;
+
+  @include mixins.tablet {
+    width: 100%;
+    max-width: 224px;
+  }
+
+  @include mixins.mobile {
+    width: 100%;
+    max-width: 288px;
+  }
+
   &.new {
     background-color: var(--color-success-background);
 
