--- a/src/app/core/components/activity-feed/activity-feed.component.scss
+++ b/src/app/core/components/activity-feed/activity-feed.component.scss
@@ -31,6 +31,26 @@
     justify-content: space-between;
   }
 
+  .info_box {
+    width: 100%;
+    border-radius: 16px;
+    background-color: var(--color-surfaces);
+    padding: 16px;
+
+    a {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      line-height: 24px;
+      span {
+        line-height: 24px;
+      }
+      .icon {
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
   #results_area {
     display: flex;
     flex-direction: column;
