--- a/src/app/account/components/login/login-dialog.component.html
+++ b/src/app/account/components/login/login-dialog.component.html
@@ -1,8 +1,12 @@
 <div class="overlay" dialog-close></div>
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
+    <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header">
       <div class="header_text">
         <h4 class="title" translate="MODALS.LOGIN_HEADING"></h4>
