--- a/src/app/core/components/onboarding/onboarding.component.html
+++ b/src/app/core/components/onboarding/onboarding.component.html
@@ -1,9 +1,12 @@
 <div class="overlay" dialog-close></div>
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
     <notification></notification>
   </div>
   <div class="dialog" *ngIf="(auth.user$ | async) as user">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+    </div>
     <div class="dialog_header">
       <div class="header_with_icon">
         <div class="icon_notification">
