--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -1,9 +1,58 @@
 <div class="overlay"></div>
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
     <notification></notification>
+    <div class="notification_inline mobile_show" *ngIf="notification" [ngClass]="notification.level">
+      <div class="icon_notification">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="24" height="24" rx="12" fill="#5AB467" />
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M18.9849 6.13908C19.2395 6.35122 19.2739 6.72956 19.0617 6.98413L10.0617 17.7841C9.94734 17.9214 9.77773 18.0005 9.59905 18C9.42038 17.9995 9.25123 17.9194 9.13764 17.7814L4.93764 12.6814C4.72699 12.4256 4.76358 12.0475 5.01937 11.8369C5.27517 11.6262 5.6533 11.6628 5.86396 11.9186L9.60353 16.4595L18.1399 6.2159C18.352 5.96134 18.7303 5.92694 18.9849 6.13908Z"
+            fill="white" stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </div>
+      <div class="message">
+        <div class="content">
+          <div class="content_description"
+            [innerHTML]="notification.message"></div>
+        </div>
+      </div>
+      <button class="btn_small_nav icon" (click)="notification=null;">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+            fill="#2C3B47" />
+        </svg>
+      </button>
+    </div>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_show">
+      <notification></notification>
+      <div class="notification_inline" *ngIf="notification" [ngClass]="notification.level">
+        <div class="icon_notification">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="24" height="24" rx="12" fill="#5AB467" />
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M18.9849 6.13908C19.2395 6.35122 19.2739 6.72956 19.0617 6.98413L10.0617 17.7841C9.94734 17.9214 9.77773 18.0005 9.59905 18C9.42038 17.9995 9.25123 17.9194 9.13764 17.7814L4.93764 12.6814C4.72699 12.4256 4.76358 12.0475 5.01937 11.8369C5.27517 11.6262 5.6533 11.6628 5.86396 11.9186L9.60353 16.4595L18.1399 6.2159C18.352 5.96134 18.7303 5.92694 18.9849 6.13908Z"
+              fill="white" stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+        </div>
+        <div class="message">
+          <div class="content">
+            <div class="content_description"
+              [innerHTML]="notification.message"></div>
+          </div>
+        </div>
+        <button class="btn_small_nav icon" (click)="notification=null;">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+              fill="#2C3B47" />
+          </svg>
+        </button>
+      </div>
+    </div>
     <div class="nav_buttons_wrap" *ngIf="TopicIdeaService.items$ | async as ideas">
       <button class="btn_medium_close mobile_hidden icon" [dialog-close]="true">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -200,13 +249,13 @@
         <div class="replies_header">
           <div class="items_wrap">
             <div class="bold" translate="COMPONENTS.IDEA_DIALOG.REPLIES"
-              [translateParams]="{count: idea.replies.count}"></div>
+              [translateParams]="{count: replyCount}"></div>
             <button *ngIf="!showReply" class="btn_medium_submit" (click)="showReply = true"
               translate="COMPONENTS.IDEA_DIALOG.BTN_REPLY"></button>
           </div>
           <div class="form_wrap" *ngIf="showReply">
-            <idea-reply-form id="reply_form" [(showReply)]="showReply" [topicId]="topic.id"
-              [ideationId]="ideation.id" [ideaId]="idea.id"></idea-reply-form>
+            <idea-reply-form id="reply_form" [(showReply)]="showReply" [topicId]="topic.id" [ideationId]="ideation.id"
+              [ideaId]="idea.id" [(notification)]="notification"></idea-reply-form>
           </div>
           <div class="line_separator"></div>
         </div>
@@ -220,6 +269,29 @@
               </ng-container>
             </ng-container>
           </div>
+        </div>
+        <div class="notification_inline mobile_hidden" *ngIf="notification" [ngClass]="notification.level">
+          <div class="icon_notification">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <rect width="24" height="24" rx="12" fill="#5AB467" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M18.9849 6.13908C19.2395 6.35122 19.2739 6.72956 19.0617 6.98413L10.0617 17.7841C9.94734 17.9214 9.77773 18.0005 9.59905 18C9.42038 17.9995 9.25123 17.9194 9.13764 17.7814L4.93764 12.6814C4.72699 12.4256 4.76358 12.0475 5.01937 11.8369C5.27517 11.6262 5.6533 11.6628 5.86396 11.9186L9.60353 16.4595L18.1399 6.2159C18.352 5.96134 18.7303 5.92694 18.9849 6.13908Z"
+                fill="white" stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="message">
+            <div class="content">
+              <div class="content_description"
+                [innerHTML]="notification.message"></div>
+            </div>
+          </div>
+          <button class="btn_small_nav icon" (click)="notification=null;">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289Z"
+                fill="#2C3B47" />
+            </svg>
+          </button>
         </div>
       </div>
     </div>
