--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
@@ -310,3 +310,13 @@
     background: var(--color-border);
   }
 }
+.notification_inline {
+  border-radius: 8px;
+  align-items: center;
+
+  /* Shadow/Heavy */
+  box-shadow: 0px 12px 16px 0px rgba(50, 85, 112, 0.1),
+    0px 8px 20px 0px rgba(220, 231, 240, 0.3);
+  width: 100%;
+  flex-direction: row;
+}
