--- a/src/app/topic/components/argument-reactions/argument-reactions.component.html
+++ b/src/app/topic/components/argument-reactions/argument-reactions.component.html
@@ -1,9 +1,12 @@
 <div class="overlay" dialog-close></div>
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_hidden">
+      <notification></notification>
+    </div>
     <div class="dialog_header">
       <div class="header_text">
         <h4 class="title" translate="MODALS.TOPIC_COMMENT_REACTIONS_HEADING"></h4>
