--- a/src/app/topic/components/topic-invite/topic-invite-dialog.component.html
+++ b/src/app/topic/components/topic-invite/topic-invite-dialog.component.html
@@ -1,10 +1,13 @@
 <div class="overlay" dialog-close></div>
 
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
     <notification></notification>
   </div>
   <div class="dialog">
+    <div id="notification_wrap_dialog" class="mobile_hidden">
+      <notification></notification>
+    </div>
     <div class="dialog_header">
       <div class="header_text">
         <h4 class="title" translate="COMPONENTS.TOPIC_INVITE_DIALOG.HEADING"></h4>
