--- a/src/app/topic/components/topic-vote-create/topic-vote-create-dialog.component.html
+++ b/src/app/topic/components/topic-vote-create/topic-vote-create-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="overlay"></div>
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
     <notification></notification>
   </div>
   <div class="dialog">
