--- a/src/app/topic/components/topic-vote-reminder-dialog/topic-vote-reminder-dialog.component.html
+++ b/src/app/topic/components/topic-vote-reminder-dialog/topic-vote-reminder-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="overlay" dialog-close></div>
 <div class="dialog_wrap">
-  <div id="notification_wrap_dialog">
+  <div id="notification_wrap_dialog" class="mobile_hidden">
     <notification></notification>
   </div>
   <div class="dialog" *ngIf="user$ | async as user">
