--- a/src/app/topic/components/duplicate-topic-dialog/duplicate-topic-dialog.component.html
+++ b/src/app/topic/components/duplicate-topic-dialog/duplicate-topic-dialog.component.html
@@ -100,6 +100,13 @@
               <path d="M17 7L7 17" stroke="#2C3B47" stroke-width="2" />
               <path d="M7 7L17 17" stroke="#2C3B47" stroke-width="2" />
             </svg>
+            <span translate="COMPONENTS.DUPLICATE_TOPIC.WILL_NOT_BE_DUPLICATED_8"></span>
+          </div>
+          <div class="row">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M17 7L7 17" stroke="#2C3B47" stroke-width="2" />
+              <path d="M7 7L17 17" stroke="#2C3B47" stroke-width="2" />
+            </svg>
             <span translate="COMPONENTS.DUPLICATE_TOPIC.WILL_NOT_BE_DUPLICATED_3"></span>
           </div>
           <div class="row">
