--- a/src/app/ideation/components/idea-reply-form/idea-reply-form.component.html
+++ b/src/app/ideation/components/idea-reply-form/idea-reply-form.component.html
@@ -19,7 +19,7 @@
       </cos-input>
       <textarea cosmarkdown cosmarkdowntranslatecharacterstatuskey="COMPONENTS.IDEA_REPLY_FORM.CHARACTER_LIMIT"
         id="argument_reply_text" [(item)]="reply.text" class="gray_borders" [ngClass]="{'error_input': errors?.text}"
-        placeholder="{{'COMPONENTS.IDEA_REPLY_FORM.PLACEHOLDER_WRITE_REPLY_HERE' | translate}}"
+        placeholder="COMPONENTS.IDEA_REPLY_FORM.PLACEHOLDER_WRITE_REPLY_HERE"
         [limit]="ARGUMENT_TYPES_MAXLENGTH['reply']"></textarea><!--(keyup)="argumentTextLengthCheck(form, form.text)"-->
       <label for="argument_reply_text" class="error_label" *ngIf="errors?.text">
         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
