--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.html
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.html
@@ -4,6 +4,10 @@
 <ng-container *ngIf="ideation">
   <div class="ideation_wrap">
     <div class="ideation_header">
+      <div class="header_division mobile_show">
+        <div class="bold" translate="COMPONENTS.TOPIC_IDEATION.LBL_IDEATION_CLOSED">
+        </div>
+      </div>
       <div class="header_division">
         <svg class="mobile_hidden" width="32" height="32" viewBox="0 0 32 32" fill="none"
           xmlns="http://www.w3.org/2000/svg">
@@ -14,6 +18,7 @@
         <div class="ideation_question">{{ideation.question}}</div>
       </div>
       <div class="header_division">
+        <div class="bold mobile_hidden" translate="COMPONENTS.TOPIC_IDEATION.LBL_IDEATION_CLOSED"></div>
         <div class="ideation_deadline" *ngIf="ideation.deadline">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
