--- a/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
+++ b/src/app/ideation/components/topic-ideation/topic-ideation.component.scss
@@ -1,7 +1,6 @@
 @use "mixins";
 
 .ideas_wrap {
-  padding: 24px;
   display: flex;
   gap: 16px;
   grid-row-gap: 24px;
@@ -35,8 +34,69 @@
   }
 }
 
+.ideation_info_wrap {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  border-radius: 8px;
+  gap: 16px;
+
+  .line_separator {
+    background-color: var(--color-ideation-disabled);
+  }
+  .ideation_info_text_wrap {
+    display: flex;
+    justify-content: space-between;
+    gap: 32px;
+    padding: 16px;
+    background-color: var(--color-dialog-ideation-contrast);
+
+    .ideation_text_left,
+    .ideation_text_right {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+
+    .text_area {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .ideation_text_left {
+      .text_area {
+        display: flex;
+        flex-direction: column;
+        max-width: 440px;
+        gap: 8px;
+
+        div {
+          font-size: 14px;
+          line-height: 16px;
+          span,
+          a {
+            font-size: 14px;
+            line-height: 16px;
+          }
+          font-size: 14px;
+          display: flex;
+          gap: 8px;
+        }
+        .links_wrap {
+          margin-top: 16px;
+          flex-direction: column;
+          a {
+            gap: 8px;
+            display: flex;
+            align-items: center;
+          }
+        }
+      }
+    }
+  }
+}
+
 .tabs_wrap {
-  padding: 24px 24px 0 24px;
   display: flex;
   gap: 24px;
   width: 100%;
@@ -115,7 +175,7 @@
   display: flex;
   gap: 16px;
   flex-direction: row;
-  padding: 24px;
+  padding: 24px 0;
   width: 100%;
 
   .options_row {
@@ -133,7 +193,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  padding: 24px;
+  padding: 24px 0;
   .folder_row {
     display: flex;
     flex-direction: row;
